2000-12-07  Larry Ewing  <lewing@helixcode.com>

	* htmlengine-save.c (html_engine_save_buffer_new): add cast to
	cleanup warning.
	(html_engine_save): cleanup warning.
	(html_engine_save_plain): cleanup warning.

	* htmlengine-save.h: make prototypes match.
	
	* gtkhtml-private.h: add last_selection_type parameter to the the
	private stucture to track what selections whe have requested.

	* gtkhtml.h: change gtk_html_request_paste prototype to
	include type parameter.

	* gtkhtml.c: added UTF8_STRING (and UTF-8) targets to support the
	various X selection atoms people are using.
	(selection_get): support the new targets.
	(init): add new targets.

2000-12-07  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c: border extra tweakings

	* htmlgdkpainter.c (draw_panel): changed border drawing
	(find_font): if found bigger and smaller font than requsted,
	choose according to size known from font style

	* htmltable.c: fix HTML_CHANGE_PREF_WIDTH brokeness
	count padding to cell width

	* htmlgdkpainter.c: removed obsolete code

2000-12-06  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (parse_object_params): use
	html_tokenizer_peek_token check for pending <param> tags
	nondestructively.
	(parse_object): clean up the calls to parse_body, and discard_body
	now that we have no longer already popped the token off the stack.

	* htmltokenizer.h: add prototype for html_tokenizer_peek_token.

	* htmltokenizer.c (html_tokenizer_peek_token): add a new function
	to peek at the next token nondestructively.

	* htmlengine.c (parse_object): make sure we actually match the end
	tag properly.

2000-12-06  Radek Doulik  <rodo@helixcode.com>

	* htmlobject.c (html_object_calc_preferred_width): cache
	pref_width

	* htmlobject.h: added pref_width

	* htmlembedded.c (allocate): set HTML_CHANGE_ALL

	* htmltext.c (split): set HTML_CHANGE_ALL

	* htmlimage.c (html_image_factory_area_prepared): set HTML_CHANGE_ALL

	* htmlinterval.c (select_object): use top engine for select_in and