@@ -24,7 +24,6 @@ libgtkhtml_HEADERS =				\
 	gtkhtml-embedded.h			\
 	gtkhtml-enums.h				\
 	gtkhtml-im.h				\
-	gtkhtml-input.h				\
 	gtkhtml-private.h			\
 	gtkhtml-properties.h			\
 	gtkhtml-search.h			\
@@ -114,7 +113,6 @@ libgtkhtml_HEADERS =				\
 libgtkhtml_la_SOURCES =				\
 	gtkhtml-embedded.c			\
 	gtkhtml-im.c				\
-	gtkhtml-input.c				\
 	gtkhtml-properties.c			\
 	gtkhtml-search.c			\
 	gtkhtml-stream.c			\
