@@ -33,7 +33,6 @@ typedef struct _GtkHTMLEditorAPI GtkHTMLEditorAPI;
 typedef struct _GtkHTMLEmbedded GtkHTMLEmbedded;
 typedef struct _GtkHTMLEmbeddedClass GtkHTMLEmbeddedClass;
 typedef struct _GtkHTMLEmbeddedPrivate GtkHTMLEmbeddedPrivate;
-typedef struct _GtkHTMLInputLine GtkHTMLInputLine;
 typedef struct _GtkHTMLPrivate GtkHTMLPrivate;
 typedef struct _GtkHTMLStream GtkHTMLStream;
 
